rework dark mode toggle

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Cabin+Sketch:wght@700&family=Reenie+Beanie&display=swap"
+      href="https://fonts.googleapis.com/css?family=Lato:400,400italic,700|Sansita+One"
       rel="stylesheet"
     />
     <link rel="stylesheet" type="text/css" href="/styles.css" />
@@ -24,6 +24,11 @@
           </li>
         </ul>
       </nav>
+      <label class="dark-mode">
+        <input class="dark-mode__checkbox" type="checkbox"/>
+        <span class="dark-mode__toggle"></span>
+        Toggle dark mode
+      </label>
     </header>
     <main>
       <div class="grid">
@@ -748,9 +753,9 @@
           </svg>
         </div>
         <div>
-          <h1>Hi, I'm Rose and you've found my website.</h1>
+          <h1>Hi, I'm Rose, and you've found my website.</h1>
           <p>
-            I live in Norwich. I make web things. And occassionally knit things
+            I live in Norwich. I make web things. And occasionally knit things
             to.
           </p>
         </div>
